--- a/index.html
+++ b/index.html
@@ -250,8 +250,18 @@
     </section>
   </template>
 
+  <template id="comment">
+    <li class="social__comment">
+      <img
+        class="social__picture"
+        src="{{аватар}}"
+        alt="{{имя комментатора}}"
+        width="35" height="35">
+      <p class="social__text">{{текст комментария}}</p>
+    </li>
+  </template>
+
   <script src="js/main.js" type="module"></script>
-  <script src="js/functions.js"></script>
 </body>
 
 </html>
